--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "baobab-provider",
   "version": "0.0.1",
   "description": "Baobab Provider helps you make universal applications with React and Baobab.",
-  "main": "index.js",
+  "main": "lib/lib.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel src/lib.js > lib/lib.js"
   },
   "repository": {
     "type": "git",
@@ -23,5 +24,22 @@
   "bugs": {
     "url": "https://github.com/LestaD/baobab-provider/issues"
   },
-  "homepage": "https://github.com/LestaD/baobab-provider#readme"
+  "homepage": "https://github.com/LestaD/baobab-provider#readme",
+  "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-cli": "^6.7.7",
+    "babel-plugin-transform-class-properties": "^6.6.0",
+    "babel-plugin-transform-es2015-destructuring": "^6.6.5",
+    "babel-plugin-transform-es2015-function-name": "^6.5.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.7.7",
+    "babel-plugin-transform-function-bind": "^6.5.2",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-react-node6": "^1.0.0",
+    "baobab": "^2.3.3",
+    "react": "^15.0.1"
+  },
+  "peerDependencies": {
+    "baobab": "^2.0.0",
+    "react": "^15.0.0"
+  }
 }
