--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "lib/lib.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel src/lib.js > lib/lib.js"
+    "build": "babel src/lib.js > lib/lib.js",
+    "build:legacy": "babel --presets es2015 --plugins transform-class-properties src/lib.js > legacy.js"
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,7 @@
     "babel-plugin-transform-es2015-function-name": "^6.5.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.7.7",
     "babel-plugin-transform-function-bind": "^6.5.2",
+    "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-node6": "^1.0.0",
     "baobab": "^2.3.3",
