--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "baobab": "^2.3.3",
     "react": "^15.0.1"
   },
+  "dependencies": {},
   "peerDependencies": {
     "baobab": "^2.0.0",
     "react": "^15.0.0"
